# capacitor-native-agent

./: .gitignore  .gitmodules  CLAUDE.md  CapacitorNativeAgent.podspec  LICENSE  Package.swift  README.md  package.json  tsconfig.json
android/: build.gradle
android/src/main/java/com/t6x/plugins/nativeagent/: LanceDBBridge.kt  MemoryProviderImpl.kt  NativeAgentBridge.kt  NativeAgentPlugin.kt  NativeNotifierImpl.kt
android/src/main/java/uniffi/native_agent_ffi/: native_agent_ffi.kt
ios/Frameworks/NativeAgentFFI.xcframework/: Info.plist
ios/Frameworks/NativeAgentFFI.xcframework/ios-arm64-simulator/Headers/native_agent_ffi/: module.modulemap  native_agent_ffi.swift  native_agent_ffiFFI.h
ios/Frameworks/NativeAgentFFI.xcframework/ios-arm64/Headers/native_agent_ffi/: native_agent_ffi.swift  native_agent_ffiFFI.h
ios/Sources/NativeAgentPlugin/: LanceDBBridge.swift  MemoryProviderImpl.swift  NativeAgentBridge.swift  NativeAgentPlugin.swift  NativeNotifierImpl.swift
rust/native-agent-ffi/: Cargo.toml
rust/native-agent-ffi/.cargo/: config.toml
rust/native-agent-ffi/src/: agent_loop.rs  auth.rs  config_store.rs  db.rs  event_bus.rs  lib.rs  llm_driver.rs  tool_runner.rs  types.rs  workspace.rs
scripts/: build-android.sh  build-ios.sh
src/: definitions.ts  index.ts  plugin.ts
